--- a/src/com/project/thursday/main_menu.fxml
+++ b/src/com/project/thursday/main_menu.fxml
@@ -1,8 +1,39 @@
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.BorderPane?>
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<GridPane fx:controller="com.project.thursday.Controller"
-          xmlns:fx="http://javafx.com/fxml" alignment="center" hgap="10" vgap="10">
-</GridPane>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<BorderPane fx:controller="com.project.thursday.Controller"
+            xmlns:fx="http://javafx.com/fxml">
+    <center>
+        <GridPane alignment="CENTER" hgap="10" vgap="10">
+            <Label text="First Name" GridPane.columnIndex="0" GridPane.rowIndex="0"/>
+            <TextField GridPane.columnIndex="1" GridPane.rowIndex="0"/>
+            <Label text="Last Name" GridPane.columnIndex="0" GridPane.rowIndex="1"/>
+            <TextField GridPane.columnIndex="1" GridPane.rowIndex="1"/>
+            <Label text="Address 1" GridPane.columnIndex="0" GridPane.rowIndex="2"/>
+            <TextField GridPane.columnIndex="1" GridPane.rowIndex="2"/>
+            <Label text="Address 2" GridPane.columnIndex="0" GridPane.rowIndex="3"/>
+            <TextField GridPane.columnIndex="1" GridPane.rowIndex="3"/>
+            <Label text="City" GridPane.columnIndex="0" GridPane.rowIndex="4"/>
+            <TextField GridPane.columnIndex="1" GridPane.rowIndex="4"/>
+            <Label text="Postcode" GridPane.columnIndex="2" GridPane.rowIndex="4"/>
+            <TextField GridPane.columnIndex="3" GridPane.rowIndex="4"/>
+            <Label text="National Insurance" GridPane.columnIndex="0" GridPane.rowIndex="5"/>
+            <TextField GridPane.columnIndex="1" GridPane.rowIndex="5"/>
+            <Label text="Bank Account" GridPane.columnIndex="0" GridPane.rowIndex="6"/>
+            <TextField GridPane.columnIndex="1" GridPane.rowIndex="6"/>
+            <Label text="Starting Salary" GridPane.columnIndex="0" GridPane.rowIndex="7"/>
+            <TextField GridPane.columnIndex="1" GridPane.rowIndex="7"/>
+        </GridPane>
+    </center>
+    <bottom>
+        <AnchorPane>
+            <Button fx:id="addButton" />
+        </AnchorPane>
+    </bottom>
+
+</BorderPane>
