--- a/src/com/project/thursday/add_employee.fxml
+++ b/src/com/project/thursday/add_employee.fxml
@@ -6,35 +6,36 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
-<BorderPane fx:controller="com.project.thursday.Controller"
+<?import javafx.scene.control.ComboBox?>
+<BorderPane fx:controller="com.project.thursday.AddEmployee"
             xmlns:fx="http://javafx.com/fxml">
     <center>
         <GridPane alignment="CENTER" hgap="10" vgap="10">
             <Label text="First Name" GridPane.columnIndex="0" GridPane.rowIndex="0"/>
-            <TextField GridPane.columnIndex="1" GridPane.rowIndex="0" prefWidth="200"/>
+            <TextField fx:id="fNameText" GridPane.columnIndex="1" GridPane.rowIndex="0" prefWidth="200"/>
             <Label text="Last Name" GridPane.columnIndex="0" GridPane.rowIndex="1"/>
-            <TextField GridPane.columnIndex="1" GridPane.rowIndex="1" prefWidth="200"/>
+            <TextField fx:id="lNameText" GridPane.columnIndex="1" GridPane.rowIndex="1" prefWidth="200"/>
             <Label text="Address 1" GridPane.columnIndex="0" GridPane.rowIndex="2"/>
-            <TextField GridPane.columnIndex="1" GridPane.rowIndex="2" prefWidth="300"/>
+            <TextField fx:id="add1Text" GridPane.columnIndex="1" GridPane.rowIndex="2" prefWidth="300"/>
             <Label text="Address 2" GridPane.columnIndex="0" GridPane.rowIndex="3"/>
-            <TextField GridPane.columnIndex="1" GridPane.rowIndex="3" />
+            <TextField fx:id="add2Text" GridPane.columnIndex="1" GridPane.rowIndex="3" />
             <Label text="City" GridPane.columnIndex="0" GridPane.rowIndex="4"/>
-            <TextField GridPane.columnIndex="1" GridPane.rowIndex="4" prefWidth="150"/>
+            <TextField fx:id="cityText" GridPane.columnIndex="1" GridPane.rowIndex="4" prefWidth="150"/>
             <Label text="Postcode" GridPane.columnIndex="0" GridPane.rowIndex="5"/>
-            <TextField GridPane.columnIndex="1" GridPane.rowIndex="5"/>
+            <TextField fx:id="pcodeText" GridPane.columnIndex="1" GridPane.rowIndex="5"/>
             <Label text="National Insurance" GridPane.columnIndex="0" GridPane.rowIndex="6"/>
-            <TextField GridPane.columnIndex="1" GridPane.rowIndex="6"/>
+            <TextField fx:id="niText" GridPane.columnIndex="1" GridPane.rowIndex="6"/>
             <Label text="Bank Account" GridPane.columnIndex="0" GridPane.rowIndex="7"/>
-            <TextField GridPane.columnIndex="1" GridPane.rowIndex="7"/>
+            <TextField fx:id="accoutText" GridPane.columnIndex="1" GridPane.rowIndex="7"/>
             <Label text="Starting Salary" GridPane.columnIndex="0" GridPane.rowIndex="8"/>
-            <TextField GridPane.columnIndex="1" GridPane.rowIndex="8"/>
+            <TextField fx:id="salaryText" GridPane.columnIndex="1" GridPane.rowIndex="8"/>
             <Label text="Business Unit" GridPane.columnIndex="0" GridPane.rowIndex="9"/>
-            <TextField GridPane.columnIndex="1" GridPane.rowIndex="9"/>
+            <ComboBox fx:id="buCB" GridPane.columnIndex="1" GridPane.rowIndex="9"/>
         </GridPane>
     </center>
     <bottom>
         <AnchorPane>
-            <Button fx:id="addButton" text="Add" AnchorPane.bottomAnchor="25" AnchorPane.rightAnchor="25" />
+            <Button fx:id="addButton" text="Add" AnchorPane.bottomAnchor="25" AnchorPane.rightAnchor="25" onAction="#add"/>
             <Button fx:id="cancelButton" text="Cancel" AnchorPane.bottomAnchor="25" AnchorPane.leftAnchor="25" />
         </AnchorPane>
     </bottom>
