--- a/src/com/project/thursday/add_employee.fxml
+++ b/src/com/project/thursday/add_employee.fxml
@@ -33,13 +33,14 @@
             <Label text="Business Unit" GridPane.columnIndex="0" GridPane.rowIndex="9"/>
             <ComboBox fx:id="buCB" GridPane.columnIndex="1" GridPane.rowIndex="9"/>
             <Label text="Employee" GridPane.columnIndex="0" GridPane.rowIndex="10"/>
-            <RadioButton fx:id="empRB" GridPane.columnIndex="1" GridPane.rowIndex="10"/>
             <Label text="Sales Employee" GridPane.columnIndex="0" GridPane.rowIndex="11"/>
+
+            <RadioButton fx:id="empRB" GridPane.columnIndex="1" GridPane.rowIndex="10"/>
             <RadioButton fx:id="salesEmpRB" GridPane.columnIndex="1" GridPane.rowIndex="11"/>
-            <Label text="Commision Rate" GridPane.columnIndex="0" GridPane.rowIndex="12"/>
+            <Label fx:id="comLabel" text="Commision Rate" GridPane.columnIndex="0" GridPane.rowIndex="12"/>
             <TextField fx:id="commText" GridPane.columnIndex="1" GridPane.rowIndex="12"/>
-            <Label text="Commision Rate" GridPane.columnIndex="0" GridPane.rowIndex="12"/>
-            <TextField fx:id="totSalesText" GridPane.columnIndex="1" GridPane.rowIndex="12"/>
+            <Label fx:id="totSaleLabel" text="Total Sales" GridPane.columnIndex="0" GridPane.rowIndex="13"/>
+            <TextField fx:id="totSalesText" GridPane.columnIndex="1" GridPane.rowIndex="13"/>
 
         </GridPane>
     </center>
