--- a/src/com/project/thursday/salary_report.fxml
+++ b/src/com/project/thursday/salary_report.fxml
@@ -13,9 +13,9 @@
 <?import javafx.scene.control.ComboBox?>
 <BorderPane fx:controller="com.project.thursday.PayReport"
             xmlns:fx="http://javafx.com/fxml">
-    <top>
-        <Pane minHeight="50"/>
-    </top>
+    <padding>
+        <Insets bottom="10.0" left="10.0" right ="10.0" top="10.0"/>
+    </padding>
     <left>
     </left>
     <center>
