--- a/src/com/project/thursday/main_menu.fxml
+++ b/src/com/project/thursday/main_menu.fxml
@@ -60,7 +60,7 @@
             <padding>
                 <Insets bottom="10.0" left="10.0" right ="10.0" top="10.0"/>
             </padding>
-            <Button fx:id="exitButton" text="Cancel" AnchorPane.bottomAnchor="25" AnchorPane.rightAnchor="25" onAction="#close" />
+            <Button fx:id="exitButton" text="Cancel" AnchorPane.bottomAnchor="10" AnchorPane.leftAnchor="10" onAction="#close" prefWidth="100" />
         </AnchorPane>
     </bottom>
 
